[project]
name = "coloring-page"
version = "0.0.1"
description = "turning pictures into coloring pages"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Corin Wagen", email = "corin.wagen@gmail.com" },
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.dependencies]
python = ">=3.13.5,<3.14"
numpy = ">=2.3.2,<3"
pillow = ">=11.3.0,<12"
jupyter = ">=1.1.1,<2"
matplotlib = ">=3.10.5,<4"
scipy = ">=1.16.1,<2"

[tool.pixi.pypi-dependencies]
opencv-python = ">=4.11.0.86, <5"

[tool.ruff]
line-length = 160
exclude = ["*.ipynb"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
